# coco_material

./: .gitignore  README.md  deployment_search.py  intelligent_search.ipynb  pyproject.toml  training_dataset.csv  training_search.py
