[tool.poetry]
name = "coco-material"
version = "0.1.0"
description = "A machine learning search for CocoMaterial"
authors = ["ZenseiTech <barizonte@gmail.com>"]
license = "Open"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
nltk = "^3.8.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
